--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         moteurs de recherches connus et sécurisés. Les principaux mots-clés utilisés lors de cette recherche sont les suivants : "métiers", "développeur web", "études", "informatique",
         "développeur fullstack".
     </p>
-    <img src="Images/wordcloud.png" alt="nuage de mots clé" id="nuagemots"/>
+    <img src="Images/wordcloud.jpg" alt="nuage de mots clé" id="nuagemots"/>
 </div>
 <div>
     <h1> Livre </h1>
